<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minesweeper</string>
    <string name="action_settings">Settings</string>
    <string name="expand_button">Expand</string>
    <string name="mine_button">Toggle Mine</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_game_setup">Game Setup</string>
    <string name="start_button">Start</string>
    <string name="mineCountText">Number of Mines</string>
    <string name="win_message">You win!</string>
    <string name="lose_message">You lose!</string>
    <string name="play_again_dialog">Play again?</string>
    <string name="left_arrow"><![CDATA[<]]></string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="new_game">New Game</string>
    <string name="options">Options</string>
    <string name="high_scores">High scores</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="clear_scores">Clear scores</string>
    <string name="high_score_title">High Scores</string>
    <string name="grid_size">Grid Size</string>
    <string name="grid_dimensions">10 x 10</string>

</resources>
