<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="hu.ait.android.maggie.minesweeper.GameSetupActivity">

    <TextView
        android:id="@+id/gridSizeText"
        android:text="@string/grid_size"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/gridDims"
        android:textSize="35sp"
        android:text="@string/grid_dimensions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridSizeText"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/mineCountText"
        android:text="@string/mineCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/gridDims"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/mineCount"
        android:text="10"
        android:textSize="35sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mineCountText"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/addMinesBtn"
        android:text="@string/right_arrow"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/mineCount"
        android:layout_below="@id/mineCountText"
        android:layout_marginLeft="10dp"/>

    <Button
        android:id="@+id/removeMinesBtn"
        android:text="@string/left_arrow"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/mineCountText"
        android:layout_toLeftOf="@id/mineCount"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/startBtn"
        android:text="@string/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
